--- a/personal_site/src/Hero.css
+++ b/personal_site/src/Hero.css
@@ -1,3 +1,5 @@
+@import '@fontsource/dm-sans';
+
 .hero-section {
     display: flex;
     align-items: center;         /* Vertically center content */
@@ -77,6 +79,7 @@
     color: #fff;
     margin-bottom: 32px;
     text-align: left;
+    font-family: 'DM Sans';
   }
 
   .description-centered {
@@ -241,6 +244,7 @@
     
     .title {
       font-size: 1.6rem;
+      font-family: 'DM Sans';
       margin: 15px 0;
     }
   }
